fix: [PIE-1679]: configure alignment issue

--- a/src/modules/70-pipeline/components/PipelineSteps/Steps/Steps.module.scss
+++ b/src/modules/70-pipeline/components/PipelineSteps/Steps/Steps.module.scss
@@ -222,3 +222,10 @@
     }
   }
 }
+.marginBotFive {
+  margin: 0px 0px 5px !important;
+}
+
+.marginTopFive {
+  margin: 5px 0px 0px !important;
+}
